<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:showAsAction="never" />
    <item android:id="@+id/action_group_info" android:title="@string/menu_group_info"
        android:showAsAction="never" android:visible="false" />
    <item android:id="@+id/action_rename" android:title="@string/menu_rename"
        android:showAsAction="never" />
    <item android:id="@+id/action_verify" android:title="@string/action_safety_number"
        android:showAsAction="never" />
    <item android:id="@+id/action_disappearing" android:title="@string/menu_disappearing"
        android:showAsAction="never" />
    <item android:id="@+id/action_block" android:title="@string/menu_block"
        android:showAsAction="never" />
</menu>
